--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
     --secondary-color: #179FDA;
     --Background-color: #120F1E;
     --third-color: #664885;
+    --extra-color: #B336BE;
 }
 
 * {
@@ -77,11 +78,40 @@ body {
     top: 0;
 }
 
+.floating-btn {
+    position: fixed;
+    bottom: 8%;
+    right: 2%;
+    /* transform: translateX(-50%); */
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    border: 2px solid #f1f1f1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 #fff;
+    animation: pulse 1.3s infinite;
+}
+
+.floating-btn img {
+    width: 30px;
+}
+
+@keyframes pulse {
+    to {
+        box-shadow: 0 0 0 16px rgba(255, 255, 255, 0.01);
+    }
+}
+
 /* ----------------------------- */
 /*     aside section styles      */
 
 .aside-container {
     position: fixed;
+    padding: 2%;
+    padding-bottom: 0;
     z-index: 20;
     width: 15%;
     height: 100vh;
@@ -92,7 +122,7 @@ body {
 }
 
 .aside-logo__img {
-    padding: 2%;
+
     margin-top: 8%;
 
 }
@@ -106,27 +136,34 @@ body {
 }
 
 .aside-nav__item {
-    color: #fff;
+
     margin-bottom: 30px;
 }
 
 .aside-nav__list {
     list-style: none;
-    padding: 50px 20px 20px;
-    text-align: center;
+
+    margin-top: 50px;
+
     font-size: 30px;
 }
 
+.aside-nav__list a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .aside-circuit {
-    text-align: center;
+    width: 100%;
+
+    object-fit: cover;
     margin-top: auto;
 }
 
 .aside-circuit img {
     width: 80%;
-    height: 50vh;
-    object-fit: cover;
-    margin: auto;
+
+
 }
 
 
@@ -136,6 +173,7 @@ body {
 .second-section {
     margin-left: 15%;
     padding: 4.5%;
+    padding-right: 10%;
 
     background-image: linear-gradient(116deg, rgba(18, 15, 30, 1) 14%, rgba(81, 61, 113, 0.5) 64%), url(../assets/blick.png);
     background-repeat: no-repeat;
@@ -149,7 +187,7 @@ body {
 
 .second-section>p {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-bottom: 3rem;
     color: #fff;
     font-weight: 100;
@@ -178,16 +216,58 @@ body {
 .card {
     max-width: 400px;
     padding: 1.25rem;
-    border: 2px var(--secondary-color) solid;
+    /* border: 2px var(--secondary-color) solid; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 30px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
     margin-bottom: 2rem;
+
+    /* For animations card */
+    position: relative;
+    overflow: hidden;
+    transition: 1.5s ease-in-out;
+
 }
 
+/* start animations  card */
+
+.card::before {
+    content: '';
+    position: absolute;
+    width: 220px;
+    height: 200%;
+    background: linear-gradient(var(--secondary-color), var(--extra-color));
+    animation: rotate 10s 5s linear infinite;
+
+}
+
+.card:hover {
+    transform: scale(1.1);
+}
+
+
+.card::after {
+    content: '';
+    position: absolute;
+    background-color: var(--primary-color);
+    inset: 3px;
+    border-radius: 30px;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* end animations card */
 
 .second-section__content {
     display: flex;
@@ -196,19 +276,23 @@ body {
 .card-container p {
     font-weight: 300;
     color: #fff;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    z-index: 2;
 
 }
 
 .wrapper {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     padding: 8px;
     margin-bottom: 16px;
+    z-index: 2;
 }
 
-.wrapper path {
-    color: red
+.svg-money__item,
+.svg-lock__item,
+.svg-bolt__item {
+    fill: var(--secondary-color)
 }
 
 /* ----------------------------- */
@@ -218,11 +302,8 @@ body {
 .third-section {
     margin-left: 15%;
     padding: 4.5%;
-    /* 
-    display: flex; 
-    align-items: center;*/
+    padding-right: 10%;
     background-image: url(../assets/Meteor.svg);
-
     background-size: cover;
 
 }
@@ -231,10 +312,12 @@ body {
     display: flex;
     align-items: center;
     gap: 1rem;
+
+
 }
 
 .third-section .third-section__content p {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-bottom: 30px;
     color: #fff;
     font-weight: 100;
@@ -260,11 +343,20 @@ body {
 .fourth-section {
     margin-left: 15%;
     padding: 4.5%;
-    padding-top: 0;
+    padding-right: 10%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap-reverse;
+
+    /* gradiente text */
+    background: radial-gradient(var(--extra-color),
+            var(--secondary-color)) fixed;
+    background: conic-gradient(var(--extra-color),
+            var(--secondary-color),
+            var(--extra-color)) fixed;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .img_phone__container {
@@ -322,6 +414,9 @@ footer {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+/* ----------------------------- */
+/*              Media            */
+
 @media screen and (max-width : 750px) {
     .third-section__content {
         flex-direction: column;
@@ -336,4 +431,13 @@ footer {
     }
 
 
+    .floating-btn {
+        width: 45px;
+        height: 45px;
+        right: 40%;
+    }
+
+    .floating-btn img {
+        width: 20px;
+    }
 }
